force-app/main/default/objects/sc_ext__Alert__c/sc_ext__Alert__c.object-meta.xml
<CustomObject>
    <label>Own Alert</label>
    <nameField>
        <displayFormat>Alert-{00000000}</displayFormat>
        <label>Own Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Own Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>