force-app/main/default/objects/sc_ext__Alert__c/fields/sc_ext__AlertConfigId__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__AlertConfigId__c</fullName>
    <description>deprecated</description>
    <label>Alert Config Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>