force-app/main/default/objects/sc_ext__Alert__c/fields/sc_ext__IsActive__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>