force-app/main/default/objects/sc_ext__Alert__c/fields/sc_ext__Operator__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>