force-app/main/default/objects/sc_ext__Alert__c/fields/sc_ext__Value__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>